--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -1,7 +1,7 @@
 {
     "name": "age-js",
     "version": "0.0.0",
-    "license": "MIT",
+    "license": "Apache 2.0",
     "scripts": {
         "ng": "ng",
         "start": "npm run write-version && ng serve",
