migrate AGE-JS to Angular 6

--- a/src/age_js/tsconfig.json
+++ b/src/age_js/tsconfig.json
@@ -25,6 +25,7 @@
         "noImplicitReturns": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "strict": true
+        "strict": true,
+        "skipLibCheck": true
     }
 }
