--- a/src/age_js/src/tsconfig.spec.json
+++ b/src/age_js/src/tsconfig.spec.json
@@ -3,6 +3,12 @@
     "compilerOptions": {
         "outDir": "../out-tsc/spec",
         "baseUrl": "./",
+        "paths": {
+            // see https://github.com/Stuk/jszip/issues/524
+            "stream": [
+                "../node_modules/readable-stream/readable.js"
+            ]
+        },
         "module": "commonjs",
         "types": [
             "jasmine",
