--- a/src/age_js/angular.json
+++ b/src/age_js/angular.json
@@ -20,7 +20,8 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/@fortawesome/fontawesome-free/css/solid.css",
+              "node_modules/@fortawesome/fontawesome-free/css/fontawesome.css"
             ],
             "scripts": []
           },
