--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -22,9 +22,9 @@
         "@angular/platform-browser": "6.0.4",
         "@angular/platform-browser-dynamic": "6.0.4",
         "@angular/router": "6.0.4",
+        "@fortawesome/fontawesome-free": "5.1.0",
         "core-js": "2.5.7",
         "file-type": "8.0.0",
-        "font-awesome": "4.7.0",
         "jszip": "3.1.5",
         "rxjs": "6.2.0",
         "zone.js": "0.8.26"
