--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -13,42 +13,43 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "6.0.4",
-        "@angular/common": "6.0.4",
-        "@angular/compiler": "6.0.4",
-        "@angular/core": "6.0.4",
-        "@angular/forms": "6.0.4",
-        "@angular/http": "6.0.4",
-        "@angular/platform-browser": "6.0.4",
-        "@angular/platform-browser-dynamic": "6.0.4",
-        "@angular/router": "6.0.4",
+        "@angular/animations": "6.0.7",
+        "@angular/common": "6.0.7",
+        "@angular/compiler": "6.0.7",
+        "@angular/core": "6.0.7",
+        "@angular/forms": "6.0.7",
+        "@angular/http": "6.0.7",
+        "@angular/platform-browser": "6.0.7",
+        "@angular/platform-browser-dynamic": "6.0.7",
+        "@angular/router": "6.0.7",
         "@fortawesome/fontawesome-free": "5.1.0",
         "core-js": "2.5.7",
         "file-type": "8.0.0",
         "jszip": "3.1.5",
-        "rxjs": "6.2.0",
+        "rxjs": "6.2.1",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "0.6.8",
         "@angular/cli": "6.0.8",
-        "@angular/compiler-cli": "6.0.4",
-        "@angular/language-service": "6.0.4",
+        "@angular/compiler-cli": "6.0.7",
+        "@angular/language-service": "6.0.7",
         "@types/file-type": "5.2.1",
         "@types/jasmine": "2.8.8",
         "@types/jasminewd2": "2.0.3",
         "@types/jszip": "3.1.4",
-        "@types/node": "10.3.1",
-        "codelyzer": "4.3.0",
+        "@types/node": "10.5.1",
+        "codelyzer": "4.4.2",
         "jasmine-core": "3.1.0",
         "jasmine-spec-reporter": "4.2.1",
-        "karma": "2.0.2",
+        "karma": "2.0.4",
         "karma-chrome-launcher": "2.2.0",
         "karma-coverage-istanbul-reporter": "2.0.1",
         "karma-firefox-launcher": "1.1.0",
         "karma-jasmine": "1.1.2",
         "karma-jasmine-html-reporter": "1.1.0",
-        "ts-node": "6.1.0",
+        "rxjs-tslint": "0.1.5",
+        "ts-node": "7.0.0",
         "tslint": "5.10.0",
         "typescript": "2.7.2"
     }
