--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -6,6 +6,7 @@
         "ng": "ng",
         "start": "npm run generate-files && ng serve",
         "build": "npm run generate-files && ng build --prod",
+        "build:analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/stats.json",
         "test": "ng test",
         "lint": "ng lint",
         "generate-files": "npm run write-favicon && npm run write-version",
@@ -54,6 +55,7 @@
         "rxjs-tslint": "0.1.5",
         "ts-node": "7.0.0",
         "tslint": "5.10.0",
-        "typescript": "2.7.2"
+        "typescript": "2.7.2",
+        "webpack-bundle-analyzer": "2.13.1"
     }
 }
