simplify AGE-JS icon generation and make it more flexible

--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -9,8 +9,8 @@
         "build:analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/stats.json",
         "test": "ng test",
         "lint": "ng lint",
-        "generate-files": "npm run write-favicon && npm run write-version",
-        "write-favicon": "node tools/write-favicon.js",
+        "generate-files": "npm run write-icons && npm run write-version",
+        "write-icons": "node tools/write-icons.js",
         "write-version": "node tools/write-version.js",
         "cmake-age-wasm": "node tools/cmake-age-wasm.js"
     },
@@ -43,7 +43,6 @@
         "@types/jszip": "3.1.4",
         "@types/node": "10.5.1",
         "codelyzer": "4.4.2",
-        "icon-gen": "1.2.1",
         "jasmine-core": "3.1.0",
         "jasmine-spec-reporter": "4.2.1",
         "karma": "2.0.4",
@@ -53,6 +52,7 @@
         "karma-jasmine": "1.1.2",
         "karma-jasmine-html-reporter": "1.1.0",
         "rxjs-tslint": "0.1.5",
+        "svg2png": "4.1.1",
         "ts-node": "7.0.0",
         "tslint": "5.10.0",
         "typescript": "2.7.2",
