--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -4,9 +4,10 @@
     "license": "Apache 2.0",
     "scripts": {
         "ng": "ng",
-        "start": "npm run generate-files && ng serve",
         "build": "npm run generate-files && ng build --prod",
         "build:analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/stats.json",
+        "start:dev": "npm run generate-files && ng serve",
+        "start:prod": "npm run build && http-server ./dist",
         "test": "ng test",
         "lint": "ng lint",
         "generate-files": "npm run write-icons && npm run write-version",
@@ -24,7 +25,9 @@
         "@angular/http": "6.0.7",
         "@angular/platform-browser": "6.0.7",
         "@angular/platform-browser-dynamic": "6.0.7",
+        "@angular/pwa": "0.6.8",
         "@angular/router": "6.0.7",
+        "@angular/service-worker": "6.0.7",
         "@fortawesome/fontawesome-free": "5.1.0",
         "core-js": "2.5.7",
         "file-type": "8.0.0",
@@ -43,6 +46,7 @@
         "@types/jszip": "3.1.4",
         "@types/node": "10.5.1",
         "codelyzer": "4.4.2",
+        "http-server": "0.11.1",
         "jasmine-core": "3.1.0",
         "jasmine-spec-reporter": "4.2.1",
         "karma": "2.0.4",
