--- a/src/age_js/src/manifest.json
+++ b/src/age_js/src/manifest.json
@@ -14,7 +14,8 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": "index.html",
+    "scope": "/",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#000000"
