--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -4,16 +4,18 @@
     "license": "Apache 2.0",
     "scripts": {
         "ng": "ng",
+        "http-serve-dist": "http-server ./dist --gzip",
         "build": "npm run generate-files && ng build --prod",
         "build:analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/stats.json",
         "start:dev": "npm run generate-files && ng serve",
-        "start:prod": "npm run build && http-server ./dist",
+        "start:prod": "npm run build && npm run gzip-dist && npm run http-serve-dist",
         "test": "ng test",
         "lint": "ng lint",
         "generate-files": "npm run write-icons && npm run write-version",
         "write-icons": "node tools/write-icons.js",
         "write-version": "node tools/write-version.js",
-        "cmake-age-wasm": "node tools/cmake-age-wasm.js"
+        "cmake-age-wasm": "node tools/cmake-age-wasm.js",
+        "gzip-dist": "node tools/gzip-dist.js"
     },
     "private": true,
     "dependencies": {
