--- a/src/age_js/src/manifest.json
+++ b/src/age_js/src/manifest.json
@@ -14,8 +14,7 @@
             "sizes": "512x512"
         }
     ],
-    "scope": "/",
-    "start_url": "/",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#000000"
