update age-js dependencies

--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -4,9 +4,9 @@
     "license": "Apache 2.0",
     "scripts": {
         "ng": "ng",
-        "http-serve-dist": "http-server ./dist --gzip",
+        "http-serve-dist": "http-server ./dist/age-js --gzip",
         "build": "npm run generate-files && ng build --prod",
-        "build:analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/stats.json",
+        "build:analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/age-js/stats.json",
         "start:dev": "npm run generate-files && ng serve",
         "start:prod": "npm run build && npm run gzip-directory && npm run http-serve-dist",
         "test": "ng test",
@@ -19,51 +19,51 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "6.0.7",
-        "@angular/common": "6.0.7",
-        "@angular/compiler": "6.0.7",
-        "@angular/core": "6.0.7",
-        "@angular/forms": "6.0.7",
-        "@angular/http": "6.0.7",
-        "@angular/platform-browser": "6.0.7",
-        "@angular/platform-browser-dynamic": "6.0.7",
-        "@angular/pwa": "0.6.8",
-        "@angular/router": "6.0.7",
-        "@angular/service-worker": "6.0.7",
-        "@fortawesome/angular-fontawesome": "0.1.1",
-        "@fortawesome/fontawesome-svg-core": "1.2.0",
-        "@fortawesome/free-solid-svg-icons": "5.1.0",
-        "core-js": "2.5.7",
-        "file-type": "8.0.0",
+        "@angular/animations": "7.2.3",
+        "@angular/common": "7.2.3",
+        "@angular/compiler": "7.2.3",
+        "@angular/core": "7.2.3",
+        "@angular/forms": "7.2.3",
+        "@angular/http": "7.2.3",
+        "@angular/platform-browser": "7.2.3",
+        "@angular/platform-browser-dynamic": "7.2.3",
+        "@angular/pwa": "0.13.0",
+        "@angular/router": "7.2.3",
+        "@angular/service-worker": "7.2.3",
+        "@fortawesome/angular-fontawesome": "0.3.0",
+        "@fortawesome/fontawesome-svg-core": "1.2.14",
+        "@fortawesome/free-solid-svg-icons": "5.7.1",
+        "core-js": "2.6.3",
+        "file-type": "10.7.1",
         "jszip": "3.1.5",
-        "rxjs": "6.2.1",
-        "zone.js": "0.8.26"
+        "rxjs": "6.4.0",
+        "tslib": "1.9.3",
+        "zone.js": "0.8.29"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.6.8",
-        "@angular/cli": "6.0.8",
-        "@angular/compiler-cli": "6.0.7",
-        "@angular/language-service": "6.0.7",
-        "@types/file-type": "5.2.1",
-        "@types/jasmine": "2.8.8",
-        "@types/jasminewd2": "2.0.3",
+        "@angular-devkit/build-angular": "0.13.0",
+        "@angular/cli": "7.3.0",
+        "@angular/compiler-cli": "7.2.3",
+        "@angular/language-service": "7.2.3",
+        "@types/file-type": "10.6.0",
+        "@types/jasmine": "3.3.8",
         "@types/jszip": "3.1.4",
-        "@types/node": "10.5.1",
-        "codelyzer": "4.4.2",
+        "@types/node": "10.12.21",
+        "codelyzer": "4.5.0",
         "http-server": "0.11.1",
-        "jasmine-core": "3.1.0",
+        "jasmine-core": "3.3.0",
         "jasmine-spec-reporter": "4.2.1",
-        "karma": "2.0.4",
+        "karma": "4.0.0",
         "karma-chrome-launcher": "2.2.0",
-        "karma-coverage-istanbul-reporter": "2.0.1",
+        "karma-coverage-istanbul-reporter": "2.0.4",
         "karma-firefox-launcher": "1.1.0",
-        "karma-jasmine": "1.1.2",
-        "karma-jasmine-html-reporter": "1.1.0",
-        "rxjs-tslint": "0.1.5",
-        "sharp": "0.20.5",
-        "ts-node": "7.0.0",
-        "tslint": "5.10.0",
-        "typescript": "2.7.2",
-        "webpack-bundle-analyzer": "2.13.1"
+        "karma-jasmine": "2.0.1",
+        "karma-jasmine-html-reporter": "1.4.0",
+        "rxjs-tslint": "0.1.6",
+        "sharp": "0.21.3",
+        "ts-node": "8.0.2",
+        "tslint": "5.12.1",
+        "typescript": "3.2.4",
+        "webpack-bundle-analyzer": "3.0.3"
     }
 }
