--- a/src/age_js/tsconfig.json
+++ b/src/age_js/tsconfig.json
@@ -1,31 +1,27 @@
 {
     "compileOnSave": false,
-
-    // TypeScript compiler options
-    //  -> https://www.typescriptlang.org/docs/handbook/compiler-options.html
     "compilerOptions": {
-        "lib": [
-            "es2017",
-            "dom"
-        ],
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "sourceMap": true,
+        "declaration": false,
+        "module": "es2015",
         "moduleResolution": "node",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "importHelpers": true,
+        "target": "es5",
         "typeRoots": [
             "node_modules/@types"
         ],
-
-        // output
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "outDir": "./dist/out-tsc",
+        "lib": [
+            "es2018",
+            "dom"
+        ],
         "removeComments": true,
-        "sourceMap": true,
-        "target": "es6",
-
-        // code checks
         "noImplicitReturns": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "strict": true,
-        "skipLibCheck": true
+        "strict": true
     }
 }
