--- a/src/age_js/angular.json
+++ b/src/age_js/angular.json
@@ -24,8 +24,7 @@
             ],
             "styles": [
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "production": {
