--- a/src/age_js/.editorconfig
+++ b/src/age_js/.editorconfig
@@ -9,5 +9,8 @@ insert_final_newline = true
 max_line_length = 120
 trim_trailing_whitespace = true
 
+[*.json]
+indent_size = 2
+
 [*.md]
 max_line_length = 80
