--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "5.9.0",
     "file-type": "11.1.0",
     "jszip": "3.2.1",
+    "resize-observer-polyfill": "1.5.1",
     "rxjs": "6.5.2",
     "tslib": "1.9.3",
     "zone.js": "0.9.1"
