age-js: update dependencies, use 'serve' instead of 'http-server' for local testing

--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -4,7 +4,7 @@
   "license": "Apache 2.0",
   "scripts": {
     "ng": "ng",
-    "http-serve-dist": "http-server ./dist --gzip",
+    "http-serve-dist": "cd ./dist && serve",
     "build": "npm run generate-files && ng build --prod",
     "build:analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/age-js/stats.json",
     "start:dev": "npm run generate-files && ng serve",
@@ -26,7 +26,7 @@
     "@angular/forms": "8.0.0",
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/pwa": "0.800.1",
+    "@angular/pwa": "0.800.2",
     "@angular/router": "8.0.0",
     "@angular/service-worker": "8.0.0",
     "@fortawesome/angular-fontawesome": "0.4.0",
@@ -40,15 +40,15 @@
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.1",
-    "@angular/cli": "8.0.1",
+    "@angular-devkit/build-angular": "0.800.2",
+    "@angular/cli": "8.0.2",
     "@angular/compiler-cli": "8.0.0",
     "@angular/language-service": "8.0.0",
     "@types/jasmine": "3.3.13",
     "@types/jszip": "3.1.6",
-    "@types/node": "12.0.4",
+    "@types/node": "12.0.7",
     "codelyzer": "5.1.0",
-    "http-server": "0.11.1",
+    "serve": "11.0.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.1.0",
