--- a/src/age_js/tools/tsconfig.json
+++ b/src/age_js/tools/tsconfig.json
@@ -1,16 +1,13 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "esnext",
-        "typeRoots": [
-            "node_modules/@types"
-        ],
-        "types": [
-            "node"
-        ],
-        "lib": [
-            "es2018"
-        ],
-        "strict": true
-    }
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "module": "commonjs",
+    "types": [
+      "node"
+    ],
+    "lib": [
+      "es2018"
+    ],
+    "strict": true
+  }
 }
