age-js: add toolbar using angular material (first try)

--- a/src/age_js/package.json
+++ b/src/age_js/package.json
@@ -25,6 +25,7 @@
     "@angular/compiler": "8.0.1",
     "@angular/core": "8.0.1",
     "@angular/forms": "8.0.1",
+    "@angular/material": "8.0.1",
     "@angular/platform-browser": "8.0.1",
     "@angular/platform-browser-dynamic": "8.0.1",
     "@angular/pwa": "0.800.3",
@@ -35,6 +36,7 @@
     "@fortawesome/free-brands-svg-icons": "5.9.0",
     "@fortawesome/free-solid-svg-icons": "5.9.0",
     "file-type": "12.0.0",
+    "hammerjs": "2.0.8",
     "jszip": "3.2.1",
     "resize-observer-polyfill": "1.5.1",
     "rxjs": "6.5.2",
