--- a/src/age_js/angular.json
+++ b/src/age_js/angular.json
@@ -34,6 +34,7 @@
             ],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/purple-green.css"
+              // "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": [
               "node_modules/hammerjs/hammer.min.js"
