--- a/src/age_js/angular.json
+++ b/src/age_js/angular.json
@@ -18,7 +18,7 @@
             "index": "src/age-app/index.html",
             "main": "src/age-app/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/age-app/tsconfig.json",
+            "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/assets",
               {
@@ -99,7 +99,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/age-app/tsconfig.json",
+              "src/tsconfig.app.json",
               "src/tsconfig.spec.json"
             ],
             "exclude": [
