--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,13 @@
 build/doxygen/html
 build/artifacts
 
-# AGE-JS build files
+# AGE-JS
 src/age_js/dist
 src/age_js/node_modules
 src/age_js/npm-debug.log*
 src/age_js/src/assets/age_wasm*
-src/age_js/src/assets/icon-*.png
+src/age_js/src/assets/icons/icon-*.png
 src/age_js/src/environments/version.ts
 
 # miscellaneous files
 Thumbs.db
-src/age_js/tools/api-token.txt
