--- a/src/age_js/tsconfig.json
+++ b/src/age_js/tsconfig.json
@@ -3,24 +3,24 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "age-lib": [
+        "src/age-lib/index.ts"
+      ]
       // see https://github.com/Stuk/jszip/issues/524#issuecomment-433817273
       // (the jszip.min.js solution does not work for us ...)
-      "stream": [
-        "node_modules/readable-stream/readable.js"
-      ]
+//      "stream": [
+//        "node_modules/readable-stream/readable.js"
+//      ]
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "downlevelIteration": true,
+    "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
     "lib": [
       "es2018",
       "dom"
@@ -29,5 +29,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "strict": true
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
   }
 }
