--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -21,10 +21,11 @@ jobs:
           version: '5.12.8'
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
 
+      # libQt5Multimedia requires libpulse
       - name: install libpulse
         run: |
           sudo apt-get update
-          sudo apt-get install libpulse
+          sudo apt-get install libpulse-dev
 
       - name: checkout code
         uses: actions/checkout@v2
