--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -9,6 +9,12 @@ env:
 jobs:
 
 
+  ###############################################################################
+  ##
+  ##   build
+  ##
+  ###############################################################################
+
   build-qt:
     name: build Qt applications
     runs-on: ubuntu-latest
@@ -44,6 +50,7 @@ jobs:
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.ARTIFACT_PATH }}
+
 
   build-wasm:
     name: build WebAssembly binaries
@@ -87,3 +94,63 @@ jobs:
         with:
           name: ${{ env.ARTIFACT_NAME }}
           path: ${{ env.ARTIFACT_PATH }}
+
+
+  ###############################################################################
+  ##
+  ##   test
+  ##
+  ###############################################################################
+
+  test-blargg:
+    name: run Blargg's test suite
+    runs-on: ubuntu-latest
+    needs: [build-qt]
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: download artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: ${{ env.ARTIFACTS_NAME }}
+          path: ${{ env.ARTIFACTS_PATH }}
+
+      - name: run tests
+        run: build/age_ci.sh test blargg
+
+
+  test-gambatte:
+    name: run Gambatte test suite
+    runs-on: ubuntu-latest
+    needs: [build-qt]
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: download artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: ${{ env.ARTIFACTS_NAME }}
+          path: ${{ env.ARTIFACTS_PATH }}
+
+      - name: run tests
+        run: build/age_ci.sh test gambatte
+
+
+  test-mooneye-gb:
+    name: run Mooneye GB test suite
+    runs-on: ubuntu-latest
+    needs: [build-qt]
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: download artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: ${{ env.ARTIFACTS_NAME }}
+          path: ${{ env.ARTIFACTS_PATH }}
+
+      - name: run tests
+        run: build/age_ci.sh test mooneye-gb
