--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -101,6 +101,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-qt]
     steps:
+      - name: install libQt5Core
+        run: |
+          sudo apt-get update
+          sudo apt-get install libQt5Core
+
       - name: checkout code
         uses: actions/checkout@v2
 
@@ -119,6 +124,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-qt]
     steps:
+      - name: install libQt5Core
+        run: |
+          sudo apt-get update
+          sudo apt-get install libQt5Core
+
       - name: checkout code
         uses: actions/checkout@v2
 
@@ -137,6 +147,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-qt]
     steps:
+      - name: install libQt5Core
+        run: |
+          sudo apt-get update
+          sudo apt-get install libQt5Core
+
       - name: checkout code
         uses: actions/checkout@v2
 
